--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- nav logo -->
     <nav id="navBar" class="container--nav">
       <div id="aboutTriggerLogoHome" class="nav--logo-container cursor-pointer ">  
-        <a class="nav--logotype-container" href="#" title="Homepage">
+        <a class="nav--logotype-container" href="https://chrisedwardsdesign.com/" title="Homepage">
           <h1 class="nav--logotype">CHRIS EDWARDS</h1>
           <div class="nav--logo-line"></div>
           <h1 class="nav--title">DESIGN</h1>
@@ -48,17 +48,17 @@
       <!-- nav links left -->
       <ul class="nav--links-left--desk cursor-pointer">
         <li>
-          <a href="#" title="Homepage">
+          <a href="https://chrisedwardsdesign.com/" title="Homepage">
             <h2 class="nav--link">DESIGN</h2>
           </a> 
         </li>
         <li>
-          <a href="#" title="Animation">
+          <a href="https://chrisedwardsdesign.com/" title="Animation">
             <h2 class="nav--link">ANIMATION</h2>
           </a>
         </li>
         <li>
-          <a href="#" title="UX / CODE">
+          <a href="https://chrisedwardsdesign.com/" title="UX / CODE">
             <h2 class="nav--link">UX / CODE</h2>
           </a>
         </li>
@@ -116,7 +116,7 @@
               </svg>
             </div>
             <div class="accordion-content">
-              <a href="#" title="Design" class="uppercase">
+              <a href="https://chrisedwardsdesign.com/" title="Design" class="uppercase">
                 <span>
                   <div class="menu--subheader">
                     <svg class="menu--svg-box" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
@@ -130,7 +130,7 @@
                   <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
                 </svg>
               </a>
-              <a href="#" title="Animtion" class="uppercase">
+              <a href="https://chrisedwardsdesign.com/" title="Animtion" class="uppercase">
                 <span>
                   <div class="menu--subheader">
                     <svg class="menu--svg-box" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
@@ -144,7 +144,7 @@
                   <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
                 </svg>
               </a>
-              <a href="#" title="UX / Code" class="uppercase">
+              <a href="https://chrisedwardsdesign.com/" title="UX / Code" class="uppercase">
                 <span>
                   <div class="menu--subheader">
                     <svg class="menu--svg-box" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
@@ -174,7 +174,7 @@
             <div class="accordion-content">
                 <!-- <p class="border-bottom-unset">Say hello, let's work together.</p>
                 <p class="">Manchester-based digital designer specialising in web design, animation and UX.</p>
-                <a href="#" class="contact-form--intro--cv-link" title="Download attached file">
+                <a href="https://chrisedwardsdesign.com/" class="contact-form--intro--cv-link" title="Download attached file">
                 <span class="uppercase">Download CV / Resume</span>
                 <span class="contact-form--intro-container--svg">
                   <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -222,7 +222,7 @@
               <div class="mobile-menu--cv">
                 <p class="border-bottom-unset">Say hello, let's work together.</p>
                 <p class="">Manchester-based digital designer specialising in web design, animation and UX.</p>
-                <a href="#" class="contact-form--intro--cv-link" title="Download attached file">
+                <a href="https://chrisedwardsdesign.com/" class="contact-form--intro--cv-link" title="Download attached file">
                 <span class="uppercase">Download CV / Resume</span>
                 <span class="contact-form--intro-container--svg download-svg--container">
                   <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -259,7 +259,7 @@
           <p class="contact-form--intro--p">Say hello, let's work together.</p>
           <p class="contact-form--intro--p">Manchester-based digital designer specialising in web design, animation and UX.</p>
         </div>
-        <a href="#" class="contact-form--intro--cv-link" title="Download attached file">
+        <a href="https://chrisedwardsdesign.com/" class="contact-form--intro--cv-link" title="Download attached file">
           <span class="uppercase">Download CV / Resume</span>
           <span class="contact-form--intro-container--svg">
             <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -359,7 +359,7 @@
                   <li><p>Project 2</p></li>
                   <li><p>Project 4</p></li>
                 </ul>
-                <a href="#" class="link--main uppercase none">
+                <a href="https://chrisedwardsdesign.com/" class="link--main uppercase none">
                   <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                     <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
@@ -393,7 +393,7 @@
                     <li><p>Project 2</p></li>
                     <li><p>Project 4</p></li>
                   </ul>
-                  <a href="#" class="link--main uppercase none">
+                  <a href="https://chrisedwardsdesign.com/" class="link--main uppercase none">
                     <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                       <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
@@ -451,60 +451,60 @@
                       <div class="splide__slide__container">
                         <img src="assets/images/text.jpg">
                       </div>
-                      <a href="#">
+                      <a href="https://chrisedwardsdesign.com/">
                         <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                           <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
                         </svg>
-                        <p href="#">PROJECT TITLE 1</P>
+                        <p href="https://chrisedwardsdesign.com/">PROJECT TITLE 1</P>
                       </a>
                     </li>
                     <li class="splide__slide" data-splide-html-video="assets/video/test-video.mp4">
                       <div class="splide__slide__container">
                         <img src="assets/images/text.jpg">
                       </div>
-                      <a href="#">
+                      <a href="https://chrisedwardsdesign.com/">
                         <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                           <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
                         </svg>
-                        <p href="#">PROJECT TITLE 2</P>
+                        <p href="https://chrisedwardsdesign.com/">PROJECT TITLE 2</P>
                       </a>
                     </li>
                     <li class="splide__slide" data-splide-html-video="assets/video/test-video.mp4">
                       <div class="splide__slide__container">
                         <img src="assets/images/text.jpg">
                       </div>
-                      <a href="#">
+                      <a href="https://chrisedwardsdesign.com/">
                         <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                           <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
                         </svg>
-                        <p href="#">PROJECT TITLE 3</P>
+                        <p href="https://chrisedwardsdesign.com/">PROJECT TITLE 3</P>
                       </a>
                     </li>
                     <li class="splide__slide" data-splide-html-video="assets/video/test-video.mp4">
                       <div class="splide__slide__container">
                         <img src="assets/images/text.jpg">
                       </div>
-                      <a href="#">
+                      <a href="https://chrisedwardsdesign.com/">
                         <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                           <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
                         </svg>
-                        <p href="#">PROJECT TITLE 4</P>
+                        <p href="https://chrisedwardsdesign.com/">PROJECT TITLE 4</P>
                       </a>
                     </li>
                     <li class="splide__slide" data-splide-html-video="assets/video/test-video.mp4">
                       <div class="splide__slide__container">
                         <img src="assets/images/text.jpg">
                       </div>
-                      <a href="#">
+                      <a href="https://chrisedwardsdesign.com/">
                         <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                           <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
                         </svg>
-                        <p href="#">PROJECT TITLE 5</P>
+                        <p href="https://chrisedwardsdesign.com/">PROJECT TITLE 5</P>
                       </a>
                     </li> 
                   </ul>
@@ -527,7 +527,7 @@
                         <li><p>Education:</p><p>Manchester Metropolition University</p></li>
                       </ul>
                     </div>
-                    <a href="#" class="link--main-mob uppercase none">
+                    <a href="https://chrisedwardsdesign.com/" class="link--main-mob uppercase none">
                       <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                         <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
@@ -535,7 +535,7 @@
                       <p>Explore My Portfolio</p>
                     </a>
                   </div>
-                  <a id="logotypeSvgWidthTop" class="logotype--a-top" href="#" title="Design">
+                  <a id="logotypeSvgWidthTop" class="logotype--a-top" href="https://chrisedwardsdesign.com/" title="Design">
                     <svg class="logotype--svg cursor-pointer" width="309" height="73" viewBox="0 0 309 73" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M0.950684 71.3984V60.7984H10.3507V11.9984H0.950684V1.39844H29.4507C38.7807 1.39844 45.9207 3.76844 50.8507 8.49844C55.7807 13.2284 58.2507 20.3284 58.2507 29.7984V42.9984C58.2507 52.4684 55.7807 59.5684 50.8507 64.2984C45.9207 69.0284 38.7807 71.3984 29.4507 71.3984H0.950684ZM22.3507 60.4984H29.5507C35.2207 60.4984 39.4207 59.0384 42.1507 56.0984C44.8807 53.1684 46.2507 48.9284 46.2507 43.3984V29.4984C46.2507 23.8284 44.8807 19.5484 42.1507 16.6484C39.4207 13.7484 35.2207 12.2984 29.5507 12.2984H22.3507V60.4984Z" fill="inherit"/>
                       <path d="M65.6208 71.3984V1.39844H110.221V12.2984H77.7208V30.6984H107.421V41.5984H77.7208V60.4984H110.721V71.3984H65.6208Z" fill="inherit"/>
@@ -545,7 +545,7 @@
                       <path d="M255.731 71.3984V1.39844H278.731L295.231 63.2984H296.831V1.39844H308.731V71.3984H285.831L269.331 9.49844H267.631V71.3984H255.731Z" fill="inherit"/>
                     </svg>
                   </a>
-                  <a id="logotypeSvgWidthCenter" class="logotype--a-center" href="#" title="Animtion">
+                  <a id="logotypeSvgWidthCenter" class="logotype--a-center" href="https://chrisedwardsdesign.com/" title="Animtion">
                     <svg class="logotype--svg cursor-pointer" width="478" height="73" viewBox="0 0 478 73" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M0.0407715 71.3984L19.2408 1.39844H40.1408L59.3408 71.3984H46.9408L42.7408 55.3984H16.6408L12.4408 71.3984H0.0407715ZM19.4408 44.3984H39.9408L30.5408 8.89844H28.8408L19.4408 44.3984Z" fill="inherit"/>
                       <path d="M65.1909 71.3984V1.39844H88.1909L104.691 63.2984H106.291V1.39844H118.191V71.3984H95.2909L78.7909 9.49844H77.0909V71.3984H65.1909Z" fill="inherit"/>
@@ -558,7 +558,7 @@
                       <path d="M424.731 71.3984V1.39844H447.731L464.231 63.2984H465.831V1.39844H477.731V71.3984H454.831L438.331 9.49844H436.631V71.3984H424.731Z" fill="inherit"/>
                     </svg>
                   </a>
-                  <a id="logotypeSvgWidthBottom" class="logotype--a-bottom" href="#" title="Code">
+                  <a id="logotypeSvgWidthBottom" class="logotype--a-bottom" href="https://chrisedwardsdesign.com/" title="Code">
                     <!-- <svg class="logotype--svg cursor-pointer" width="232" height="73" viewBox="0 0 232 73" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M28.6208 72.8C20.0908 72.8 13.2908 70.38 8.22085 65.55C3.15085 60.72 0.62085 53.77 0.62085 44.7V28.1C0.62085 19.04 3.15085 12.08 8.22085 7.25C13.2908 2.42 20.0908 0 28.6208 0C37.1508 0 43.7408 2.33 48.3708 7C53.0008 11.67 55.3209 18.07 55.3209 26.2V26.8H43.5209V25.9C43.5209 21.5 42.3008 17.88 39.8708 15.05C37.4408 12.22 33.6908 10.8 28.6208 10.8C23.5508 10.8 19.8008 12.32 16.9708 15.35C14.1409 18.38 12.7208 22.57 12.7208 27.9V44.9C12.7208 50.17 14.1409 54.33 16.9708 57.4C19.8008 60.47 23.6908 62 28.6208 62C33.5508 62 37.4408 60.58 39.8708 57.75C42.3008 54.92 43.5209 51.3 43.5209 46.9V45.2H55.3209V46.6C55.3209 54.73 53.0008 61.13 48.3708 65.8C43.7408 70.47 37.1508 72.8 28.6208 72.8Z" fill="inherit"/>
                       <path d="M90.1008 72.8C81.4308 72.8 74.5208 70.38 69.3508 65.55C64.1808 60.72 61.6008 53.77 61.6008 44.7V28.1C61.6008 19.03 64.1808 12.08 69.3508 7.25C74.5208 2.42 81.4308 0 90.1008 0C98.7708 0 105.771 2.42 110.901 7.25C116.031 12.08 118.601 19.04 118.601 28.1V44.7C118.601 53.77 116.031 60.72 110.901 65.55C105.771 70.38 98.8308 72.8 90.1008 72.8ZM90.1008 62C95.3008 62 99.3508 60.48 102.251 57.45C105.151 54.42 106.601 50.3 106.601 45.1V27.7C106.601 22.5 105.151 18.38 102.251 15.35C99.3508 12.32 95.3008 10.8 90.1008 10.8C84.9008 10.8 80.9508 12.32 78.0508 15.35C75.1508 18.38 73.7008 22.5 73.7008 27.7V45.1C73.7008 50.3 75.1508 54.42 78.0508 57.45C80.9508 60.48 84.9708 62 90.1008 62Z" fill="inherit"/>
@@ -607,7 +607,7 @@
               </ul>
             </div>
             <div class="footer--col">
-              <a href="#" title="Download attached file">
+              <a href="https://chrisedwardsdesign.com/" title="Download attached file">
                 <ul>
                   <li class="footer--info-li-color uppercase">RESUME</li>
                   <li class="footer--info-link-color">Download CV / RESUME</li>
