--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <a href="https://chrisedwardsdesign.com/" class="contact-form--intro--cv-link" title="Download attached file">
                 <span class="uppercase">Download CV / Resume</span>
                 <span class="contact-form--intro-container--svg download-svg--container">
-                  <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg class="contact-form--link--svg download-svg--container--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"></path>
                   <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"></path>
                 </svg>
