--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                         <p href="https://chrisedwardsdesign.com/">PROJECT TITLE 1</P>
                       </a>
                     </li>
-                    <li class="splide__slide" data-splide-html-video="assets/video/test-video.mp4">
+                    <!-- <li class="splide__slide" data-splide-html-video="assets/video/test-video.mp4">
                       <div class="splide__slide__container">
                         <img src="assets/images/text.jpg">
                       </div>
@@ -506,7 +506,7 @@
                         </svg>
                         <p href="https://chrisedwardsdesign.com/">PROJECT TITLE 5</P>
                       </a>
-                    </li> 
+                    </li>  -->
                   </ul>
                 </div>
               </div>
