--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -28,9 +28,7 @@
     <script src="main.js" type="module"></script>
 </head>
 <body class="dark-mode">
-  <header id="header--container">
-    <!-- desktop menu -->
-    <!-- nav logo -->
+<!--   <header id="header--container">
     <nav id="navBar" class="container--nav">
       <div id="aboutTriggerLogoHome" class="nav--logo-container cursor-pointer ">  
         <a class="nav--logotype-container" href="https://chrisedwardsdesign.com/" title="Homepage">
@@ -39,13 +37,6 @@
           <h1 class="nav--title">DESIGN</h1>
         </a>
       </div>
-      <!-- timer desktop -->
-      <!-- <ul class="timer-container-desk"> -->
-        <!-- <li class="live-bullet"></li>   -->
-        <!-- <li class="countdown--title-desk">LIVE:</li>
-        <li id="countdownTimerMobile" class="maintenance--time"></li>
-      </ul> -->
-      <!-- nav links left -->
       <ul class="nav--links-left--desk cursor-pointer">
         <li>
           <a href="https://chrisedwardsdesign.com/" title="Homepage">
@@ -64,7 +55,6 @@
         </li>
       </ul>
 
-    <!-- nav links right -->
       <div class="nav--content-right">
         <button id="toggleBtn" class="mode-switch--container">
           <div class="mode-switch-btn--container">
@@ -83,13 +73,11 @@
           <h3 class="nav--contact-h3">ABOUT</h3>
         </div>
 
-        <!-- contact form -->
         <div class="nav--contact-container">
           <h3 id="formTriggerOpen" class="nav--contact-h3">CV / CONTACT</h3>
         </div>
 
         <div id="menu-button" class="mobile-menu">          
-          <!-- hamburger menu -->
           <svg id="menuPlusOpen" class="nav--menu-svg-close" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
             <path d="M0.686279 9.16797H18.6853M9.68579 0.167969L9.68579 18.167" stroke="#151714"/>
           </svg>        
@@ -100,14 +88,12 @@
 
       </div>
     </nav>
-    <!-- mobile menu -->
     <div id="mobileMenuDropDown" class="mobile-menu-overlay--container">
       <div class="mobile-menu--inner">
         <div class="accordion--container">
           <div class="accordion-item">
             <div class="accordion-header">
               <h3 class="accordion-title">WORK</h3>
-              <!-- <button class="accordion-toggle"></button> -->
               <svg id="" class="nav--menu-svg-close accordion-toggle-one accordion-item-svg-open" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0.686279 9.16797H18.6853M9.68579 0.167969L9.68579 18.167" stroke="#151714"/>
               </svg>        
@@ -163,7 +149,6 @@
           <div class="accordion-item">
             <div class="accordion-header">
               <h3 class="accordion-title">CONTACT</h3>
-              <!-- <button class="accordion-toggle"></button> -->
               <svg id="" class="nav--menu-svg-close accordion-toggle-one accordion-item-svg-open" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0.686279 9.16797H18.6853M9.68579 0.167969L9.68579 18.167" stroke="#151714"/>
               </svg>        
@@ -172,17 +157,6 @@
               </svg>
             </div>
             <div class="accordion-content">
-                <!-- <p class="border-bottom-unset">Say hello, let's work together.</p>
-                <p class="">Manchester-based digital designer specialising in web design, animation and UX.</p>
-                <a href="https://chrisedwardsdesign.com/" class="contact-form--intro--cv-link" title="Download attached file">
-                <span class="uppercase">Download CV / Resume</span>
-                <span class="contact-form--intro-container--svg">
-                  <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"></path>
-                  <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"></path>
-                </svg>
-                </span>
-                </a> -->
                 <form id="contact-form-menu" class="contact-form" action="https://formspree.io/f/mzbqwbol" method="POST">
                   <div class="contact-form--input contact-form--input-header-bg-scolor contact-form--marquee-container">
                     <div id="contact-form-menu" class="contact-form--marquee-container">
@@ -210,7 +184,6 @@
           <div id="accordionOpenDefaultResume" class="accordion-item">
             <div class="accordion-header">
               <h3 class="accordion-title">CV / RÉSUMÉ</h3>
-              <!-- <button class="accordion-toggle"></button> -->
               <svg id="" class="nav--menu-svg-close accordion-toggle-one accordion-item-svg-open" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0.686279 9.16797H18.6853M9.68579 0.167969L9.68579 18.167" stroke="#151714"/>
               </svg>        
@@ -239,7 +212,6 @@
     </div>
   </header>
 
-  <!-- form -->
   <div class="contact--form-container form-slide-left" id="formPosition">
     <div class="contact-form--info">
       <div class="contact-form--info-header">
@@ -292,15 +264,10 @@
       </div>
     </form> 
   </div>  
-  <!-- form overlay -->
   <section id="formOverlay" class="form-overlay form-hide"></section>
-  <!-- menu overlay -->
   <section id="menuOverlay" class="form-overlay form-hide"></section>
-  <!-- credits overlay -->
   <section id="creditsOverlay" class="credits-overlay"></section>
-  <!-- copyright overlay -->
   <section id="copyrightOverlay" class="credits-overlay"></section>
-  <!-- credits popup -->
   <section id="creditsContent" class="credits-content">
     <div id="creditsMessageToggle" class="credits-title--container">
       <p class="">Acknowledgements:</p>
@@ -404,33 +371,6 @@
               </div>
             </div>
             <div id="sectionMedia" class="media">
-              <!-- game -->
-              <!-- <div id="contGame" class="maintenance--game-container">
-                <span id="contMove" class="maintenance--game-btn">COMING SOON</span>
-              </div> -->
-              <!-- video -->
-
-              <!-- <div class="media--container">
-                <div class="container--video">
-                  <video id="video" class="video-content cursor-pointer" loop autoplay muted playsinline>
-                    <source class="hero-video--main" src="assets/images/test-video.mp4" type="video/mp4">
-                    <source class="hero-video--main" src="assets/images/test-video.webm" type="video/webm">
-                  </video>
-                  <img id="thumbnail" class="video-hero-thumbnail cursor-pointer" src="assets/images/text.jpg" alt="Video Thumbnail" loading="lazy">
-                  <div id="play-button" class="play-button uppercase">
-                    <svg width="9" height="17" viewBox="0 0 9 17" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M0.0415039 0.351562L8.0415 8.35156L0.0415039 16.3516" fill="inherit"/>
-                    </svg>
-                    <span class="text-container">
-                      <span class="old-text">Play</span>
-                      <span class="new-text">Play</span>
-                    </span>
-                  </div>
-                </div>
-                <div class="video-meta--container">
-                  <div class="meta-text--video"><span>1</span><span>/</span><span>1</span></div>
-                </div>
-              </div> -->
 
               <div class="splide">
                 <div class="splide__track">
@@ -559,12 +499,6 @@
                     </svg>
                   </a>
                   <a id="logotypeSvgWidthBottom" class="logotype--a-bottom" href="https://chrisedwardsdesign.com/" title="Code">
-                    <!-- <svg class="logotype--svg cursor-pointer" width="232" height="73" viewBox="0 0 232 73" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M28.6208 72.8C20.0908 72.8 13.2908 70.38 8.22085 65.55C3.15085 60.72 0.62085 53.77 0.62085 44.7V28.1C0.62085 19.04 3.15085 12.08 8.22085 7.25C13.2908 2.42 20.0908 0 28.6208 0C37.1508 0 43.7408 2.33 48.3708 7C53.0008 11.67 55.3209 18.07 55.3209 26.2V26.8H43.5209V25.9C43.5209 21.5 42.3008 17.88 39.8708 15.05C37.4408 12.22 33.6908 10.8 28.6208 10.8C23.5508 10.8 19.8008 12.32 16.9708 15.35C14.1409 18.38 12.7208 22.57 12.7208 27.9V44.9C12.7208 50.17 14.1409 54.33 16.9708 57.4C19.8008 60.47 23.6908 62 28.6208 62C33.5508 62 37.4408 60.58 39.8708 57.75C42.3008 54.92 43.5209 51.3 43.5209 46.9V45.2H55.3209V46.6C55.3209 54.73 53.0008 61.13 48.3708 65.8C43.7408 70.47 37.1508 72.8 28.6208 72.8Z" fill="inherit"/>
-                      <path d="M90.1008 72.8C81.4308 72.8 74.5208 70.38 69.3508 65.55C64.1808 60.72 61.6008 53.77 61.6008 44.7V28.1C61.6008 19.03 64.1808 12.08 69.3508 7.25C74.5208 2.42 81.4308 0 90.1008 0C98.7708 0 105.771 2.42 110.901 7.25C116.031 12.08 118.601 19.04 118.601 28.1V44.7C118.601 53.77 116.031 60.72 110.901 65.55C105.771 70.38 98.8308 72.8 90.1008 72.8ZM90.1008 62C95.3008 62 99.3508 60.48 102.251 57.45C105.151 54.42 106.601 50.3 106.601 45.1V27.7C106.601 22.5 105.151 18.38 102.251 15.35C99.3508 12.32 95.3008 10.8 90.1008 10.8C84.9008 10.8 80.9508 12.32 78.0508 15.35C75.1508 18.38 73.7008 22.5 73.7008 27.7V45.1C73.7008 50.3 75.1508 54.42 78.0508 57.45C80.9508 60.48 84.9708 62 90.1008 62Z" fill="inherit"/>
-                      <path d="M122.061 71.3984V60.7984H131.461V11.9984H122.061V1.39844H150.561C159.891 1.39844 167.031 3.76844 171.961 8.49844C176.891 13.2284 179.361 20.3284 179.361 29.7984V42.9984C179.361 52.4684 176.891 59.5684 171.961 64.2984C167.031 69.0284 159.891 71.3984 150.561 71.3984H122.061ZM143.461 60.4984H150.661C156.331 60.4984 160.531 59.0384 163.261 56.0984C165.991 53.1684 167.361 48.9284 167.361 43.3984V29.4984C167.361 23.8284 165.991 19.5484 163.261 16.6484C160.531 13.7484 156.331 12.2984 150.661 12.2984H143.461V60.4984Z" fill="inherit"/>
-                      <path d="M186.731 71.3984V1.39844H231.831V12.2984H198.831V30.6984H231.831V41.5984H198.831V60.4984H231.831V71.3984H186.731Z" fill="inherit"/>
-                    </svg> -->
                     <svg class="logotype--svg cursor-pointer" width="391" height="73" viewBox="0 0 391 73" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M27 72.8C21.4 72.8 16.58 71.78 12.55 69.75C8.52 67.72 5.42 64.77 3.25 60.9C1.08 57.03 0 52.43 0 47.1V1.4H12V47.4C12 52.07 13.3 55.67 15.9 58.2C18.5 60.73 22.2 62 27 62C31.8 62 35.58 60.73 38.15 58.2C40.72 55.67 42 52.07 42 47.4V1.4H54V47.1C54 52.43 52.93 57.03 50.8 60.9C48.67 64.77 45.57 67.72 41.5 69.75C37.43 71.78 32.6 72.8 27 72.8Z" fill="inherit"/>
                       <path d="M59.68 71.4L80.78 36.1L59.98 1.4H73.68L88.58 27.6H90.28L105.08 1.4H118.88L98.08 36.1L119.08 71.4H105.38L90.28 44.6H88.58L73.48 71.4H59.68Z" fill="inherit"/>
@@ -573,29 +507,12 @@
                       <path d="M248.47 72.8C239.8 72.8 232.89 70.38 227.72 65.55C222.55 60.72 219.97 53.77 219.97 44.7V28.1C219.97 19.03 222.55 12.08 227.72 7.25C232.89 2.42 239.8 0 248.47 0C257.14 0 264.14 2.42 269.27 7.25C274.4 12.08 276.97 19.04 276.97 28.1V44.7C276.97 53.77 274.4 60.72 269.27 65.55C264.14 70.38 257.2 72.8 248.47 72.8ZM248.47 62C253.67 62 257.72 60.48 260.62 57.45C263.52 54.42 264.97 50.3 264.97 45.1V27.7C264.97 22.5 263.52 18.38 260.62 15.35C257.72 12.32 253.67 10.8 248.47 10.8C243.27 10.8 239.32 12.32 236.42 15.35C233.52 18.38 232.07 22.5 232.07 27.7V45.1C232.07 50.3 233.52 54.42 236.42 57.45C239.32 60.48 243.34 62 248.47 62Z" fill="inherit"/>
                       <path d="M280.43 71.4V60.8H289.83V12H280.43V1.4H308.93C318.26 1.4 325.4 3.77 330.33 8.5C335.26 13.23 337.73 20.33 337.73 29.8V43C337.73 52.47 335.26 59.57 330.33 64.3C325.4 69.03 318.26 71.4 308.93 71.4H280.43ZM301.83 60.5H309.03C314.7 60.5 318.9 59.04 321.63 56.1C324.36 53.17 325.73 48.93 325.73 43.4V29.5C325.73 23.83 324.36 19.55 321.63 16.65C318.9 13.75 314.7 12.3 309.03 12.3H301.83V60.5Z" fill="inherit"/>
                       <path d="M345.1 71.4V1.4H390.2V12.3H357.2V30.7H390.2V41.6H357.2V60.5H390.2V71.4H345.1Z" fill="inherit"/>
-                      </svg>
-                      
+                    </svg>
                   </a>
                 </div>
               </div>
             </div>
-            <!-- <div class="paralax--container">
-              <div class="parallax-content--container">
-                <a class="parallax--img--container-4-5-left cursor-pointer">
-                  <img id="" class="parallax--img" src="assets/images/1.png" alt="image 1">
-                  <div class="parallax-text--container">
-                    <h3 class="uppercase">TITLE / CREDIT / 001</h3>
-                  </div>
-                </a>
-                <a href="collection.html" class="parallax--img--container-4-5-right cursor-pointer" title="Link to collection page">
-                  <img id="" class="parallax--img" src="assets/images/2.png" alt="image 2">
-                  <div class="parallax-text--container">
-                    <h3 class="uppercase">TITLE / CREDIT / 001</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
-                  </div>
-                </a>
-              </div>
-            </div> -->
+            
           </section>
         </div>
         <footer id="footer--container" class="footer--container">
@@ -630,7 +547,7 @@
             </div>
           </div>
         </footer>
-    </main>
+    </main> -->
 </body>
 </html>
- -->
+
