--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="main.js" type="module"></script>
 </head>
 <body class="dark-mode">
-<!--   <header id="header--container">
+  <header id="header--container">
     <nav id="navBar" class="container--nav">
       <div id="aboutTriggerLogoHome" class="nav--logo-container cursor-pointer ">  
         <a class="nav--logotype-container" href="https://chrisedwardsdesign.com/" title="Homepage">
@@ -547,7 +547,7 @@
             </div>
           </div>
         </footer>
-    </main> -->
+    </main>
 </body>
 </html>
 
