--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
     <script src="splide-extension-video-master/dist/js/splide-extension-video.min.js" defer></script>
     <script src="main.js" type="module" defer></script>
 </head>
-<body class="dark-mode none">
+<body class="dark-mode">
   <div id="sessionOverlay">
     <a class="nav--logotype-container" href="index.html" title="Homepage">
       <div class="nav--logotype-container cursor-none" title="Page title: CV RÉSUMÉ">
@@ -623,3 +623,4 @@
     </main>
 </body>
 </html>
+ -->
