--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="background-color: black;>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +27,7 @@
     <script src="splide-extension-video-master/dist/js/splide-extension-video.min.js" defer></script>
     <script src="main.js" type="module" defer></script>
 </head>
-<body class="dark-mode">
+<!-- <body class="dark-mode">
   <div id="sessionOverlay">
     <a class="nav--logotype-container" href="index.html" title="Homepage">
       <div class="nav--logotype-container cursor-none" title="Page title: CV RÉSUMÉ">
@@ -621,6 +621,6 @@
           </div>
         </footer>
     </main>
-</body>
+</body> -->
 </html>
- -->
+
