--- a/collection.html
+++ b/collection.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="background-color: black;>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
   <link rel="license" href="/license.txt">
   <script src="main.js"></script>
 </head>
-<body class="body-content dark-mode">
+<body class="body-content dark-mode none">
   <header id="header--container" class="header--container">
     <!-- menu -->
     <div class="mobile-menu-overlay--container none">
