--- a/animation.html
+++ b/animation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head class="style="background-color: black;">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +27,7 @@
     <script src="splide-extension-video-master/dist/js/splide-extension-video.min.js" defer></script>
     <script src="main.js" type="module" defer></script>
 </head>
-<body class="dark-mode">
+<body class="dark-mode none">
   <div id="sessionOverlay">
     <div class="nav--logotype-container cursor-none" title="Page title: CV RÉSUMÉ">
       <h1 class="nav--logotype uppercase">Chris Edwards Design</h1>
