--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </section>
     </div>
 
-    <header id="header--container" class="lg:position-fixed--important lg:z-index-3-important lg:opacity-1-important bg-transparent--important">
+    <header id="none header--container" class="lg:position-fixed--important lg:z-index-3-important lg:opacity-1-important bg-transparent--important">
       <!-- desktop menu -->
       <!-- nav logo -->
       <nav id="navBar" aria-label="Desktop navigation menu" class="container--nav lg:bg-transparent--important md:grid-auto-cols--minmax md:grid-cols--unset">
