--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     
     <div id="page-wrapper" class="page-wrapper lg:position-fixed--important lg:height-100vh lg:pointer-events-none lg:z-index-2">
       <main class="main--wrapper lg:bg-transparent">
-          <div id="innerWrapper" class="inner-wrapper lg:position-fixed--important lg:bg-transparent--important md:min-height-fit">
+          <div id="innerWrapper" class="inner-wrapper lg:position-fixed--important md:bg-transparent--important lg:bg-transparent--important md:min-height-fit">
 
             <section id="sectionContent" class="content-s">
               <div class="content--text-desktop">
