--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 
               </div>
 
-              <div id="sectionGrapahic" class="graphic--container lg:grid-row-1 md:pt-s md:pb-s">
+              <div id="sectionGrapahic" class="graphic--container lg:grid-row-1 md:pb-s">
                 <!-- desktop about -->
                 <div class="grid gap-one position-relative height-fit align-self-start lg:pt-header-height g:pt-s z-index-2 lg:grid-row-1 mdt:grid-col-1-5 lgt:grid-col-1-3 lgbg:grid-col-1-2 hide-on-mob--important">
                   <p class="intro-text-desktop lg:grid-col-1-2 grid-row-1 lg:text-l lgt:text-l lgb:text-l pointer-events-visible">
@@ -609,32 +609,7 @@
                   </div>
                 </div>
               </div>
-            </section>
-
-            <section class="fixed display-flex flex-column height-100vh z-index--0 hide-on-mob--important glass none"></section>
-            <section class="fixed display-flex flex-column height-100vh z-index--1 hide-on-mob--important video-opacity none">
-              <div class="container--video--index">
-
-                <div class="animated-gradient-fallback hide-on-mob"></div>
-
-                <video id="video" class="video-content cursor-pointer object-cover" loop autoplay muted playsinline>
-                  <source class="hero-video--main" src="assets/video/test-video.mp4" type="video/mp4">
-                  <source class="hero-video--main" src="assets/video/test-video.mp4" type="video/webm">
-                  <!-- Add additional source elements for different video formats if needed -->
-                </video>
-                <img id="thumbnail" class="video-hero-thumbnail cursor-pointer none opacity-zero" src="assets/images/text.jpg" alt="Video Thumbnail" loading="lazy">
-                <div id="play-button" class="play-button play-button--color-alt uppercase none bg-color--primary">
-                  <svg width="9" height="17" viewBox="0 0 9 17" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.0415039 0.351562L8.0415 8.35156L0.0415039 16.3516" fill="inherit"/>
-                  </svg>
-                  <span class="text-container">
-                    <span class="old-text">Play</span>
-                    <span class="new-text">Play</span>
-                  </span>
-                </div>
-              </div>
-            </section>
-
+            </section>            
           </div>
           <footer id="footer--container" class="footer--container bg-transparent--important lg:position-fixed--important lg:z-index-3 lg:pointer-events-visible">
             <div class="footer--content">
